feat: Initialize Prisma schema and seed data
- Added migration lock file for PostgreSQL provider.
- Created Prisma schema defining models for User, Game, Developer, Publisher, Genre, Platform, Review, Follow, Like, Comment, GameList, GameListEntry, Achievement, UserAchievement, Notification, and UserSession.
- Implemented seed script to populate the database with sample data
- Updated TypeScript configuration to include seed files and added Node types.

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -2,8 +2,9 @@
   "extends": "../../packages/config/src/typescript/tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "types": ["node"]
   },
-  "include": ["src"],
+  "include": ["src", "prisma/seeds"],
   "exclude": ["node_modules", "dist"]
 }
