--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -19,7 +19,7 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
-    "db:seed": "ts-node prisma/seed.ts",
+    "db:seed": "ts-node prisma/seeds/seed.ts",
     "db:studio": "prisma studio",
     "db:reset": "prisma migrate reset",
     "type-check": "tsc --noEmit",
