--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,4 +1,3 @@
-
 services:
   # PostgreSQL Database (Production)
   postgres:
@@ -16,7 +15,7 @@ services:
     networks:
       - questlog-network
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}']
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -33,7 +32,7 @@ services:
     networks:
       - questlog-network
     healthcheck:
-      test: ['CMD', 'redis-cli', 'auth', '${REDIS_PASSWORD}', 'ping']
+      test: ["CMD", "redis-cli", "auth", "${REDIS_PASSWORD}", "ping"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -48,7 +47,7 @@ services:
     container_name: questlog-backend-prod
     restart: always
     ports:
-      - '3001:3001'
+      - "3001:3001"
     environment:
       NODE_ENV: production
       PORT: 3001
@@ -85,17 +84,17 @@ services:
       redis:
         condition: service_healthy
     healthcheck:
-      test: ['CMD', 'curl', '-f', 'http://localhost:3001/health']
+      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
       interval: 60s
       timeout: 30s
       retries: 3
     deploy:
       resources:
         limits:
-          cpus: '1.0'
+          cpus: "1.0"
           memory: 1G
         reservations:
-          cpus: '0.5'
+          cpus: "0.5"
           memory: 512M
 
   # Nginx reverse proxy
@@ -104,8 +103,8 @@ services:
     container_name: questlog-nginx-prod
     restart: always
     ports:
-      - '80:80'
-      - '443:443'
+      - "80:80"
+      - "443:443"
     volumes:
       - ./docker/nginx/prod.conf:/etc/nginx/nginx.conf:ro
       - ./docker/nginx/ssl:/etc/nginx/ssl:ro
@@ -117,7 +116,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.5'
+          cpus: "0.5"
           memory: 256M
 
   # Log aggregation
@@ -139,17 +138,17 @@ services:
     container_name: questlog-prometheus-prod
     restart: always
     ports:
-      - '9090:9090'
+      - "9090:9090"
     volumes:
       - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
     networks:
       - questlog-network
     command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/etc/prometheus/console_libraries'
-      - '--web.console.templates=/etc/prometheus/consoles'
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--web.console.libraries=/etc/prometheus/console_libraries"
+      - "--web.console.templates=/etc/prometheus/consoles"
 
   # Database backup service
   db-backup:
