--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,23 +15,23 @@
     "clean": "rimraf dist .astro"
   },
   "dependencies": {
-    "astro": "^4.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@astrojs/react": "^3.0.7",
-    "@astrojs/tailwind": "^5.0.3",
-    "@astrojs/vercel": "^6.0.1",
-    "tailwindcss": "^3.3.6",
-    "nanostores": "^0.9.5",
-    "@nanostores/react": "^0.7.1",
+    "@astrojs/react": "^4.3.0",
+    "@astrojs/vercel": "^8.2.6",
+    "@nanostores/react": "^1.0.0",
     "@questlog/shared-types": "workspace:*",
+    "@questlog/ui-components": "workspace:*",
     "@questlog/utils": "workspace:*",
-    "@questlog/ui-components": "workspace:*"
+    "@tailwindcss/vite": "^4.1.12",
+    "astro": "^5.13.3",
+    "nanostores": "^1.0.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "tailwindcss": "4.1.12"
   },
   "devDependencies": {
-    "@types/react": "^18.2.42",
-    "@types/react-dom": "^18.2.17",
-    "typescript": "^5.3.2",
-    "rimraf": "^5.0.5"
+    "@types/react": "^19.1.11",
+    "@types/react-dom": "^19.1.8",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.9.2"
   }
 }
