chore(monorepo): migrate to ESLint flat config, centralize config, and enable ES module support

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@questlog/backend",
+  "type": "module",
   "version": "0.0.1",
   "description": "Questlog Backend API",
   "author": "dracudev",
