--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -3,5 +3,6 @@
   "version": "1.0.0",
   "description": "Shared configuration for Questlog monorepo (eslint, prettier, typescript, tailwind)",
   "main": "src/index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module"
 }
