--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "db:migrate": "pnpm --filter backend db:migrate",
     "db:seed": "pnpm --filter backend db:seed",
     "db:studio": "pnpm --filter backend db:studio",
-    "db:reset": "pnpm --filter backend db:reset",
-    "prepare": "husky install"
+    "db:reset": "pnpm --filter backend db:reset"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
