--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -93,6 +93,9 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapping": {
+      "^@/(.*)$": "<rootDir>/$1"
+    }
   }
 }
