--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -17,11 +17,6 @@
       "@/types/*": ["src/types/*"]
     }
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
