--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -11,7 +11,10 @@
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "typescript": "^5.3.2",
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.5",
+    "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "zod": "^3.25.76"
   }
 }
