--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -1,9 +1,16 @@
 {
   "name": "@questlog/shared-types",
   "version": "1.0.0",
+  "type": "module",
   "description": "Shared TypeScript types for Questlog",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
