--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,6 +15,7 @@
     "clean": "rimraf dist .astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^4.3.1",
     "@astrojs/vercel": "^8.2.6",
     "@nanostores/react": "^1.0.0",
