chore: add questlog-preview image

--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,8 @@ game-builds/
 # ==============================================
 k8s/secrets/
 *.kubeconfig
+
+# ==============================================
+# AI Agents
+# ==============================================
+/.agent
