--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,14 +16,18 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/node": "^9.5.0",
     "@astrojs/react": "^4.3.1",
     "@astrojs/vercel": "^8.2.6",
     "@nanostores/react": "^1.0.0",
     "@questlog/shared-types": "workspace:*",
     "@questlog/ui-components": "workspace:*",
     "@questlog/utils": "workspace:*",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.12",
-    "astro": "^5.13.3",
+    "astro": "^5.14.7",
     "lucide-react": "^0.544.0",
     "nanostores": "^1.0.1",
     "react": "^19.1.1",
