--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -25,10 +25,14 @@
     "@questlog/utils": "workspace:*",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.12",
     "astro": "^5.14.7",
+    "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.544.0",
     "nanostores": "^1.0.1",
     "react": "^19.1.1",
