--- a/apps/frontend/public/manifest.json
+++ b/apps/frontend/public/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#0ea5e9",
   "icons": [
     {
-      "src": "/placeholder-game.webp",
+      "src": "/images/game-placeholder.svg",
       "sizes": "512x512",
       "type": "image/webp"
     }
