--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -59,6 +59,7 @@
     "@nestjs/schematics": "^11.0.7",
     "@nestjs/testing": "^11.1.6",
     "@types/compression": "^1.8.1",
+    "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
@@ -66,6 +67,7 @@
     "@types/passport-local": "^1.0.38",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
+    "cookie-parser": "^1.4.7",
     "eslint": "^9.34.0",
     "jest": "^30.1.0",
     "prettier": "^3.6.2",
