feat(package.json, pnpm-lock.yaml): update dev script and add cookie-parser with types for improved request handling

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "description": "Questlog Frontend",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host localhost",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
